Resolved defect #697523 to align shipping prices in checkout

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-checkout-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-checkout-ie8.css
@@ -210,7 +210,8 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
     float: right;
     margin-left: 10px; }
   .sp-methods .price {
-    font-weight: bold; }
+    font-weight: bold;
+    float: right; }
   .sp-methods .form-list {
     padding-left: 20px; }
     .sp-methods .form-list li {
