--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
@@ -291,6 +291,7 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
     }
     .price {
         font-weight: bold;
+        float: right;
     }
     .form-list {
         padding-left: 20px;
